feature: base setup + layout

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,22 @@
 {
+    "printWidth": 80,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": true,
     "singleQuote": true,
+    "trailingComma": "all",
+    "bracketSpacing": true,
+    "arrowParens": "always",
+    "jsxBracketSameLine": false,
+    "importOrder": [
+        "<THIRD_PARTY_MODULES>",
+        "^@internal/(.*)$",
+        "^[./].*(?<!\\.(c|le|sc)ss)$",
+        "^[.]/[-a-zA-Z0-9_]+[.](module)[.](css|scss|less)$"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true,
     "plugins": [
-        "prettier-plugin-organize-imports",
         "prettier-plugin-tailwindcss"
     ]
 }
