--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
     "require": {
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^1.0",
+        "james-heinrich/getid3": "^1.9",
         "laravel/breeze": "^2.2",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "nativephp/electron": "^0.8.7",
+        "spatie/laravel-data": "^4.11",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
